<resources>
    <string name="app_name">USEA</string>
    <string name="university_name">Welcome to University of South-East Asia</string>
    <string name="student_ID">Student ID</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Midterm">MIDTERM</string>
    <string name="Assignment">ASSIGNMENT</string>
    <string name="Homework">HOMEWORK</string>
    <string name="Quiz">QUIZ</string>
    <string name="Final">FINAL</string>
    <string name="Exam_date">Exam date:</string>
    <string name="Create_By">Create by:</string>
    <string name="Time">Time:</string>
    <string name="Room">Room:</string>
    <string name="Due_Date">Due date:</string>
    <string name="Subject">This is Subject Title</string>
    <string name="Sample_txt">XXX</string>
    <string name="Major">Major</string>
    <string name="Academic">Academic Year</string>
    <string name="Promotion">Promotion</string>
    <string name="About_Me">About Me</string>
    <string name="Enter_your_current_password">Enter your current password</string>
    <string name="Change_Password">Change Password</string>
    <string name="Enter_new_password">Enter new password</string>
    <string name="shift">shift</string>
    <string name="date_of_birth">date of birth</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="dash">-</string>
    <string name="Score">Score</string>
    <string name="Follow_up_with_your_score">Follow up with your score</string>
    <string name="How_would_you_rate_your_experience_using_this_app">How would you rate your experience using this app?</string>
    <string name="Study_Plan">Study Plan</string>
    <string name="What_course_will_go_on">What course will go on</string>
    <string name="Submit_Feedback">Submit Feedback</string>
    <string name="Add_Photo">Add Photo</string>
    <string name="Optional">(Optional)</string>
    <string name="Do_you_have_any_screenshot">Do you have any screenshot?</string>
    <string name="Write_your_problem_here">Write your problem here.</string>
    <string name="Help_us_by_describing_your_problem">Help us by describing your problem</string>
    <string name="hour">hour</string>
    <string name="permission">permission</string>
    <string name="absent">absent</string>
    <string name="rank">rank</string>
    <string name="grade">grade</string>
    <string name="total">total</string>
    <string name="Trouble_Logging_In">Trouble Logging In?</string>
    <string name="enter_your_id">Enter your student ID and we\'ll send you a link to get back into your account</string>
    <string name="Send">Send</string>
    <string name="or">OR</string>
    <string name="contact_our_customer_service">Contact Our Customer Service</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="credit">Credit</string>
    <string name="hello">Hello</string>
    <string name="student_rank">Student Rank</string>
    <string name="total_credit">Total credit</string>
    <string name="semester_1">semester 1</string>
    <string name="view_detail"><![CDATA[View Detail >]]></string>
    <string name="semester_2">semester 2</string>
    <string name="_270">270</string>
    <string name="_15">15</string>
    <string name="subject">Subject</string>
    <string name="inbox">Inbox</string>
    <string name="enter_your_student_id">Enter your student ID</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="NA">N/A</string>
</resources>