<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/custom_toolbar_feedback"
            layout="@layout/custom_toolbar" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/How_would_you_rate_your_experience_using_this_app"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <RatingBar
            android:id="@+id/rating_star"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:numStars="5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingTop="10dp"
            android:text="@string/Help_us_by_describing_your_problem"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_border"
            android:gravity="start"
            android:hint="@string/Write_your_problem_here"
            android:padding="10dp"
            android:textSize="12sp"
            android:autofillHints="Write your problem here."
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/Do_you_have_any_screenshot"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/Optional"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/custom_border"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_camera_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/Add_Photo"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_btn_feedback"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_btn_border"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/Submit_Feedback"
            android:textAllCaps="false"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>